fix: adjust h5 spacing

--- a/static/css/input.css
+++ b/static/css/input.css
@@ -77,7 +77,7 @@
     }
 
     .mockup-code-container:not(:first-of-type) {
-        @apply mb-10;
+        @apply mb-5;
     }
 
     .prose p {
