--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5800,7 +5800,7 @@ article h2 {
 }
 
 .mockup-code-container:not(:first-of-type) {
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.25rem;
 }
 
 .prose p {
